# vimwiki-syntax

./: Cargo.toml  LICENSE  README.md  README.vimwiki  README.wiki  flake.nix  justfile
examples/syntax/: 00.wiki
examples/tests/: 00.vimwiki  bold.wiki  italics.norg  italics.wiki  strikethrough.wiki  underline.wiki
src/: ast.rs  error.rs  kind.rs  lexer.rs  lib.rs  main.rs  node.rs  parser.rs  span.rs
tests/: span.rs
